--- a/index.html
+++ b/index.html
@@ -160,9 +160,7 @@
                   alt="Людина, яка працює з графічним планшетом"
                   width="370"
                 />
-                <p class="work-text-top">
-                  Дизайнерські рішення
-                </p>
+                <p class="work-text-top">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
@@ -455,6 +453,21 @@
                 </a>
               </li>
             </ul>
+          </div>
+
+          <div class="footer-form">
+            <p class="form-title">Підпишіться на розсилку</p>
+            <form class="main-form">
+              <label>
+                <input type="email" name="email" placeholder="E-mail">
+              </label>
+              <button type="submit" class="footer-form-button">
+                  Підписатися 
+                <svg class="button-send-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg> 
+              </button>
+            </form>
           </div>
         </div>
       </div>
