--- a/porfolio.html
+++ b/porfolio.html
@@ -332,6 +332,21 @@
               </li>
             </ul>
           </div>
+
+          <div class="footer-form">
+            <p class="form-title">Підпишіться на розсилку</p>
+            <form class="main-form">
+              <label>
+                <input type="email" name="email" placeholder="E-mail" />
+              </label>
+              <button type="submit" class="footer-form-button">
+                Підписатися
+                <svg class="button-send-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
