--- a/index.html
+++ b/index.html
@@ -70,6 +70,64 @@
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
+            <b class="modal-form-title">
+              Залиште свої дані, ми вам передзвонимо
+            </b>
+            <form class="modal-form">
+              <div class="form-field">
+                <label for="name"> Ім'я </label>
+                <input class="modal-input" type="text" name="name" id="name" />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person-black"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <label for="phone_number"> Телефон </label>
+                <input
+                  class="modal-input"
+                  type="tel"
+                  name="phone_number"
+                  id="phone_number"
+                />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone-black"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <label for="email"> Пошта </label>
+                <input
+                  class="modal-input"
+                  type="email"
+                  name="email"
+                  id="email"
+                />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email-black"></use>
+                </svg>
+              </div>
+              <div class="form-field">
+                <label for="comment"> Коментар </label>
+                <textarea
+                  placeholder="Введіть текст"
+                  id="comment"
+                  class="modal-textarea"
+                ></textarea>
+              </div>
+              <div class="form-checkbox">
+                <label class="checkbox-label">
+                  <input
+                    type="checkbox"
+                    class="modal-checkbox"
+                    name="modal_checkbox"
+                    id="modal_checkbox"
+                  />
+                  <span class="icon"></span>
+                  Погоджуюся з розсилкою та приймаю
+                  <a href="#" class="checkbox-label-link">Умови договору</a>
+                </label>
+              </div>
+              <button class="modal-button" type="submit">Відправити</button>
+            </form>
           </div>
         </div>
       </section>
@@ -457,15 +515,18 @@
 
           <div class="footer-form">
             <p class="form-title">Підпишіться на розсилку</p>
-            <form class="main-form">
-              <label>
-                <input type="email" name="email" placeholder="E-mail">
-              </label>
+            <form class="form">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
               <button type="submit" class="footer-form-button">
-                  Підписатися 
+                Підписатися
                 <svg class="button-send-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
-                </svg> 
+                </svg>
               </button>
             </form>
           </div>
