--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 ></textarea>
               </div>
               <div class="form-checkbox">
-                <label class="checkbox-label">
+                <label class="checkbox-label" for="modal_checkbox">
                   <input
                     type="checkbox"
                     class="modal-checkbox"
