--- a/porfolio.html
+++ b/porfolio.html
@@ -335,10 +335,13 @@
 
           <div class="footer-form">
             <p class="form-title">Підпишіться на розсилку</p>
-            <form class="main-form">
-              <label>
-                <input type="email" name="email" placeholder="E-mail" />
-              </label>
+            <form class="form">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
               <button type="submit" class="footer-form-button">
                 Підписатися
                 <svg class="button-send-icon" width="24" height="24">
